# bevy_make_10

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  SPECIFICATIONS.md
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: main.rs
src/game/: calculator.rs  mod.rs  numbers.rs  solvable_numbers_test.rs  state.rs
src/ui/: components.rs  expression_tests.rs  mod.rs  systems.rs
