[package]
name = "make_10_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
uninlined_format_args = "allow"
needless_range_loop = "allow"
derivable_impls = "allow"

[lints.rust]
unused_imports = "allow"
dead_code = "allow"